# Functional-Pacman

./: .gitignore  README.md  haskell-game.cabal
.github/workflows/: ci.yml
app/: Main.hs
app/data/: test.txt
app/src/: Main.hs
app/src/Config/: TestConfig.hs
app/src/Controller/: Engine.hs  LevelController.hs  MovementController.hs  TestController.hs
app/src/Model/: Characters.hs  Game.hs  Ghosts.hs  Items.hs  Level.hs  Movement.hs  Player.hs  Score.hs  TestModel.hs
app/src/View/: Animation.hs  Config.hs  Debug.hs  Gui.hs  Helpers.hs  InfoSection.hs  LevelSection.hs  Overlays.hs  Terminal.hs  TestView.hs
data/: highscores.json
src/Controller/: Engine.hs  LevelController.hs  MovementController.hs  ScoreController.hs
src/Model/: Defaults.hs  Dijkstra.hs  Game.hs  GhostAI.hs  Ghosts.hs  Items.hs  Level.hs  Movement.hs  Player.hs  Score.hs  Utils.hs
src/View/: Animation.hs  Buttons.hs  Config.hs  Debug.hs  Gui.hs  Helpers.hs  InfoSection.hs  LevelMap.hs  LevelSection.hs  Overlays.hs  Terminal.hs
