cabal-version:      2.0
name:               haskell-game
version:            0.1.0.0
author:             Jona Leeflang
maintainer:         jona.beer@gmail.com
bug-reports:        https://github.com/ChromaChroma/haskell-game/issues
category:           Game
build-type:         Simple
license:            GPL-3
license-file:       LICENSE
copyright:          (c) 2022 Jona Leeflang && Sem Bode

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

extra-source-files:
    README.md

executable haskell-game
    build-depends:    
        base ^>=4.14.3.0,
        gloss ^>= 1.13.2.1,
        random ^>= 1.2.0,
        ilist ^>= 0.4.0.1
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   app/src
    other-modules:  
        Model.Characters
        Model.Game
        Model.Level
        Model.Items
        Model.Movement
        Model.Score
        View.Gui
        View.Terminal
        Controller.Engine
        Controller.LevelController
        Controller.MovementController

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: