cabal-version:      2.0
name:               haskell-game
version:            0.1.0.0
author:             Jona Leeflang
maintainer:         jona.beer@gmail.com
bug-reports:        https://github.com/ChromaChroma/haskell-game/issues
category:           Game
build-type:         Simple
license:            GPL-3
license-file:       LICENSE
copyright:          (c) 2022 Jona Leeflang && Sem Bode
synopsis: A haskell implementation of Pac-Man
description:
    This project is an implementation of Pac-Man for a school assignment of Functional Programming.
    The main focus of this project is to learn to program in a functional way.

extra-source-files:
    README.md

data-files:
    data/test.txt

executable haskell-game
    build-depends:
        base ^>=4.14.3.0,
        gloss ^>= 1.13.2.1,
        random ^>= 1.2.0,
        aeson ^>= 2.1.1.0,
        bytestring ^>= 0.11.3.1,
        ilist ^>= 0.4.0.1,
        heap ^>= 1.0.4,
        containers ^>= 0.6.6,
        unordered-containers ^>= 0.2.19.1,
        hashable ^>= 1.4.1.0,
        directory ^>= 1.3.8.0
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Model.Player
        Model.Game
        Model.Ghosts
        Model.GhostAI
        Model.Level
        Model.Items
        Model.Movement
        Model.Score
        Model.Utils
        Model.Dijkstra
        View.Animation
        View.Buttons
        View.Config
        View.Debug
        View.Gui
        View.InfoSection
        View.LevelSection
        View.Helpers
        View.Overlays
        View.Terminal
        View.LevelMap
        Controller.Engine
        Controller.MovementController
        Controller.ScoreController

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
